<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_back"
        android:layout_width="@dimen/px100"
        android:layout_height="@dimen/px100"
        android:layout_marginStart="@dimen/px20"
        android:layout_marginTop="@dimen/px25"
        android:background="@drawable/cell_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/px30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="?android:attr/textColorPrimary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px24"
        android:layout_marginEnd="@dimen/px40"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/px40"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_back"
        app:layout_constraintTop_toTopOf="@id/button_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/settings_categories"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/px30"
            android:fillViewport="true"
            android:clipToPadding="false"
            android:paddingTop="@dimen/px20"
            android:paddingBottom="@dimen/px30"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_setting_common"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:background="@drawable/cell_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/px30"
            android:paddingTop="@dimen/px20"
            android:paddingEnd="@dimen/px30"
            android:paddingBottom="@dimen/px20">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/px50"
                android:layout_height="@dimen/px50"
                app:srcCompat="@drawable/ic_setting"
                app:tint="?android:attr/textColorPrimary"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px20"
                android:layout_marginStart="@dimen/px20"
                android:layout_weight="1"
                android:text="@string/common_setting"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/px30"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_setting_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:background="@drawable/cell_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/px30"
            android:paddingTop="@dimen/px20"
            android:paddingEnd="@dimen/px30"
            android:paddingBottom="@dimen/px20">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/px50"
                android:layout_height="@dimen/px50"
                app:srcCompat="@drawable/ic_display"
                app:tint="?android:attr/textColorPrimary"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px20"
                android:layout_marginStart="@dimen/px20"
                android:layout_weight="1"
                android:text="@string/display_setting"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/px30"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_setting_btr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:background="@drawable/cell_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/px30"
            android:paddingTop="@dimen/px20"
            android:paddingEnd="@dimen/px30"
            android:paddingBottom="@dimen/px20">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/px50"
                android:layout_height="@dimen/px50"
                app:srcCompat="@drawable/ic_setting"
                app:tint="?android:attr/textColorPrimary"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px20"
                android:layout_marginStart="@dimen/px20"
                android:layout_weight="1"
                android:text="@string/btr_category"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/px30"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_setting_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:background="@drawable/cell_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/px30"
            android:paddingTop="@dimen/px20"
            android:paddingEnd="@dimen/px30"
            android:paddingBottom="@dimen/px20">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/px50"
                android:layout_height="@dimen/px50"
                app:srcCompat="@drawable/ic_video_play_count"
                app:tint="?android:attr/textColorPrimary"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px20"
                android:layout_marginStart="@dimen/px20"
                android:layout_weight="1"
                android:text="@string/play_setting"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/px30"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_setting_player_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:background="@drawable/cell_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/px30"
            android:paddingTop="@dimen/px20"
            android:paddingEnd="@dimen/px30"
            android:paddingBottom="@dimen/px20">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/px50"
                android:layout_height="@dimen/px50"
                app:srcCompat="@drawable/ic_player_ui"
                app:tint="?android:attr/textColorPrimary"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px20"
                android:layout_marginStart="@dimen/px20"
                android:layout_weight="1"
                android:text="@string/player_ui_setting"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/px30"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_setting_dm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:background="@drawable/cell_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/px30"
            android:paddingTop="@dimen/px20"
            android:paddingEnd="@dimen/px30"
            android:paddingBottom="@dimen/px20">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/px50"
                android:layout_height="@dimen/px50"
                app:srcCompat="@drawable/ic_video_danmaku"
                app:tint="?android:attr/textColorPrimary"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px20"
                android:layout_marginStart="@dimen/px20"
                android:layout_weight="1"
                android:text="@string/dm_setting"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/px30"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_setting_teen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:background="@drawable/cell_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/px30"
            android:paddingTop="@dimen/px20"
            android:paddingEnd="@dimen/px30"
            android:paddingBottom="@dimen/px20">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/px50"
                android:layout_height="@dimen/px50"
                app:srcCompat="@drawable/ic_teen_protection"
                app:tint="?android:attr/textColorPrimary"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px20"
                android:layout_marginStart="@dimen/px20"
                android:layout_weight="1"
                android:text="@string/teen_mode"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/px30"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_setting_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:background="@drawable/cell_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:nextFocusDown="@id/button_setting_about"
            android:orientation="horizontal"
            android:paddingStart="@dimen/px30"
            android:paddingTop="@dimen/px20"
            android:paddingEnd="@dimen/px30"
            android:paddingBottom="@dimen/px20">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/px50"
                android:layout_height="@dimen/px50"
                app:srcCompat="@drawable/ic_about"
                app:tint="?android:attr/textColorPrimary"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px20"
                android:layout_marginStart="@dimen/px20"
                android:layout_weight="1"
                android:text="@string/about_setting"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/px30"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <View
            android:id="@+id/divide"
            android:layout_width="@dimen/px1"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/px30"
            android:layout_marginTop="@dimen/px60"
            android:layout_marginBottom="@dimen/px60"
            android:background="?attr/dividerColor"
            app:layout_constraintStart_toEndOf="@id/settings_categories"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSetting"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divide"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
